--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,21 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+nav {
+  width: 100%;
+  height: 75px;
+
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: flex-end;
+
+    .nav-item {
+      font-size: 1.2rem;
+    }
+  }
+}
